src/mermaid/ascii/quadrant/snapshots/veol__mermaid__ascii__quadrant__render__tests__render_ascii_charset.snap
---
source: src/mermaid/ascii/quadrant/render.rs
expression: render_ascii(src)
---
                                   ASCII Mode

           High                                |
                              Q2               |             Q1
                                               |
                                               |
                                               |
                                               |           * A
                                               |
                                               |
                                               |
                -------------------------------+------------------------------
                              Q3               |             Q4
                                               |
                                               |
                                               |
                            * B                |
                                               |
                                               |
            Low                                |

                Low                                                       High
