src/mermaid/ascii/quadrant/snapshots/veol__mermaid__ascii__quadrant__render__tests__render_quadrant_minimal.snap
---
source: src/mermaid/ascii/quadrant/render.rs
expression: render(src)
---
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                ───────────────────────────────┼──────────────────────────────
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
