src/mermaid/ascii/quadrant/snapshots/veol__mermaid__ascii__quadrant__render__tests__render_with_axes.snap
---
source: src/mermaid/ascii/quadrant/render.rs
expression: render(src)
---
High Engagement                                │
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                ───────────────────────────────┼──────────────────────────────
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
 Low Engagement                                │

                Low Reach                                           High Reach
