src/mermaid/ascii/quadrant/snapshots/veol__mermaid__ascii__quadrant__render__tests__render_with_points.snap
---
source: src/mermaid/ascii/quadrant/render.rs
expression: render(src)
---
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                                  ● Campaign A │
                                               │
                ───────────────────────────────┼──────────────────────────────
                                               │
                                               │
                                               │
                                           ● Campaign B
                                               │
                                               │
                                               │
                                               │
