src/mermaid/ascii/quadrant/snapshots/veol__mermaid__ascii__quadrant__render__tests__render_with_quadrant_labels.snap
---
source: src/mermaid/ascii/quadrant/render.rs
expression: render(src)
---
                                               │
                        Need to promote        │      We should expand
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                ───────────────────────────────┼──────────────────────────────
                          Re-evaluate          │       May be improved
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
