src/mermaid/ascii/quadrant/snapshots/veol__mermaid__ascii__quadrant__render__tests__render_with_title.snap
---
source: src/mermaid/ascii/quadrant/render.rs
expression: render(src)
---
                       Reach and engagement of campaigns

                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                ───────────────────────────────┼──────────────────────────────
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
                                               │
